Se agrego un párrafo con lorem ipsum a index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse ab, facere error mollitia odit pariatur sint consectetur corporis sit expedita recusandae non? Soluta animi alias expedita, eos nesciunt omnis excepturi?</p>
     
 </body>
 </html>
